// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildFromV1Document test fixtures arrow-binding.tldr 1`] = `
{
  "binding:20": {
    "fromId": "shape:18",
    "id": "binding:20",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.5,
        "y": 0.5,
      },
      "terminal": "start",
    },
    "toId": "shape:16",
    "type": "arrow",
    "typeName": "binding",
  },
  "binding:22": {
    "fromId": "shape:18",
    "id": "binding:22",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.495,
        "y": 0.655,
      },
      "terminal": "end",
    },
    "toId": "shape:14",
    "type": "arrow",
    "typeName": "binding",
  },
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:14": {
    "id": "shape:14",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 177.03,
      "labelColor": "red",
      "scale": 1,
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 136.64,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1388.92,
    "y": 820.52,
  },
  "shape:16": {
    "id": "shape:16",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 114.39,
      "labelColor": "red",
      "scale": 1,
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 240.17,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1616.09,
    "y": 584.28,
  },
  "shape:18": {
    "id": "shape:18",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": -74.62876127600846,
      "color": "red",
      "dash": "draw",
      "end": {
        "x": 0,
        "y": 173.3,
      },
      "fill": "none",
      "font": "draw",
      "labelColor": "red",
      "labelPosition": 0.5,
      "scale": 1,
      "size": "m",
      "start": {
        "x": 146.32,
        "y": 0,
      },
      "text": "",
    },
    "rotation": 0,
    "type": "arrow",
    "typeName": "shape",
    "x": 1541.56,
    "y": 698.67,
  },
}
`;

exports[`buildFromV1Document test fixtures exact-arrow-binding.tldr 1`] = `
{
  "binding:19": {
    "fromId": "shape:17",
    "id": "binding:19",
    "meta": {},
    "props": {
      "isExact": true,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.6250000000000002,
        "y": 0.5700000000000003,
      },
      "terminal": "start",
    },
    "toId": "shape:15",
    "type": "arrow",
    "typeName": "binding",
  },
  "binding:21": {
    "fromId": "shape:17",
    "id": "binding:21",
    "meta": {},
    "props": {
      "isExact": true,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.5,
        "y": 0.5,
      },
      "terminal": "end",
    },
    "toId": "shape:13",
    "type": "arrow",
    "typeName": "binding",
  },
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:13": {
    "id": "shape:13",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 177.03,
      "labelColor": "red",
      "scale": 1,
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 136.64,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1418.93,
    "y": 779.31,
  },
  "shape:15": {
    "id": "shape:15",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 114.39,
      "labelColor": "red",
      "scale": 1,
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 240.17,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1616.09,
    "y": 584.28,
  },
  "shape:17": {
    "id": "shape:17",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "arrowheadEnd": "arrow",
      "arrowheadStart": "arrow",
      "bend": -117.13359957478735,
      "color": "red",
      "dash": "draw",
      "end": {
        "x": 0,
        "y": 201.67,
      },
      "fill": "none",
      "font": "draw",
      "labelColor": "red",
      "labelPosition": 0.5,
      "scale": 1,
      "size": "m",
      "start": {
        "x": 293.36,
        "y": 0,
      },
      "text": "",
    },
    "rotation": 0,
    "type": "arrow",
    "typeName": "shape",
    "x": 1510.86,
    "y": 661.97,
  },
}
`;

exports[`buildFromV1Document test fixtures incorrect-arrow-binding.tldr 1`] = `
{
  "binding:19": {
    "fromId": "shape:17",
    "id": "binding:19",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.385,
        "y": 0.425,
      },
      "terminal": "end",
    },
    "toId": "shape:13",
    "type": "arrow",
    "typeName": "binding",
  },
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:13": {
    "id": "shape:13",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 177.03,
      "labelColor": "red",
      "scale": 1,
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 136.64,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1391.66,
    "y": 769.92,
  },
  "shape:15": {
    "id": "shape:15",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 114.39,
      "labelColor": "red",
      "scale": 1,
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 240.17,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1362.24,
    "y": 784.23,
  },
  "shape:17": {
    "id": "shape:17",
    "index": "a1V",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": -0.00010621283112062974,
      "color": "red",
      "dash": "draw",
      "end": {
        "x": 0,
        "y": 6.55,
      },
      "fill": "none",
      "font": "draw",
      "labelColor": "red",
      "labelPosition": 0.5,
      "scale": 1,
      "size": "m",
      "start": {
        "x": 252.64,
        "y": 0,
      },
      "text": "",
    },
    "rotation": 0,
    "type": "arrow",
    "typeName": "shape",
    "x": 1544.3,
    "y": 817.34,
  },
}
`;
